--- a/mqtt-influxdb-grafana/telegraf.conf
+++ b/mqtt-influxdb-grafana/telegraf.conf
@@ -7,13 +7,12 @@
   ]
   data_format = "json"
   username = "esp32"
-  password = "the password for the esp32 user"
+  password = "password"
 
 # Write metrics to InfluxDB
 [[outputs.influxdb_v2]]
   urls = ["http://influxdb2:8086"]   
   bucket = "Sensors"         # Make sure this matches the bucket you created in InfluxDB
   organization = "Local"     # Make sure this matches the organization you created in InfluxDB
-  token = "place the token here"
+  token = "HTXJxEAmM-0pOsY5P7LnR4N1F-7vZlBTS6J-bGzVPkVG1dv4zrq57WRfNxnTJBuVsifH-tCA=="  # plz dont hak me
 
-  
